# tri_render

./: .gitignore  CMakeLists.txt
src/: Camera.cpp  TriMesh.cpp  TriMesh.h  TriMeshObj.cpp  TriMeshObj.h  main.cpp  util.cpp  util.h
